Fixed mobile line spacing

--- a/public/style.css
+++ b/public/style.css
@@ -175,6 +175,7 @@ footer {
 
     .timer-label {
       font-size: 5vw;
+      line-height: 4vh;
     }
 
     .evil-ass-yearn-timer {
